# genv

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
pkg/: PKGBUILD  README-0.3.0
pkg/envm/: PKGBUILD
src/: cli.rs  completions.rs  env.rs
