[package]
name = "envm"
version = "0.2.0"
edition = "2024"

[dependencies]
# chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
home = "0.5.11"
# nix = { version = "0.30.1", default-features = false, features = ["user"] }
# tempfile = "3.23.0"

[profile.release]
lto = "thin"
codegen-units = 1
